--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MindMatchUp - Interactive Quiz Games</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
     <style>
@@ -271,7 +271,7 @@
         <p>2025 MindMatchUp. All rights reserved.</p>
     </footer>
 
-    <script src="js/quizDatabase.js"></script>
-    <script src="js/main.js"></script>
+    <script src="quizDatabase.js"></script>
+    <script src="main.js"></script>
 </body>
 </html> 
