--- a/index.html
+++ b/index.html
@@ -1,9 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MindMatchUp - Interactive Quiz Games</title>
+   <meta name="theme-color" content="#ffffff">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="description" content="MindMatchUp is an interactive brain game that challenges your memory and logical thinking. Match pairs, improve your cognitive skills, and have fun!">
+<meta name="keywords" content="brain game, memory game, interactive quiz, cognitive challenge, brain teaser, mind puzzles, fun quiz, logic game, educational game">
+<meta name="author" content="Mark Majcherczyk-Olczak">
+<meta name="robots" content="index, follow">
+<meta property="og:title" content="MindMatchUp - Interactive Brain Game">
+<meta property="og:description" content="Test your memory and logic with MindMatchUp, an interactive brain game designed to improve cognitive skills while having fun!">
+<meta property="og:url" content="https://mindmatchup.com">
+<meta property="og:image" content="https://www.mindmatchup.com/og-image.jpg">
+<meta property="og:image:type" content="image/jpeg">
+<meta property="og:image:width" content="1200">
+<meta property="og:image:height" content="630">
+<meta property="og:type" content="website">
+<meta property="twitter:title" content="MindMatchUp - Interactive Brain Game">
+<meta property="twitter:description" content="Play MindMatchUp and challenge your memory and logic skills. Have fun solving puzzles and improving your cognitive abilities!">
+<meta property="twitter:url" content="https://mindmatchup.com">
+<meta property="twitter:image" content="https://www.mindmatchup.com/og-image.jpg">
+<meta property="twitter:card" content="summary_large_image">
+<title>MindMatchUp - Interactive Quiz Games</title>
+<link rel="icon" href="favicon.ico" type="image/x-icon">
+<link rel="icon" sizes="192x192" href="favicon-192x192.png">
+<link rel="apple-touch-icon" sizes="180x180" href="apple-icon.png">
+
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4069805592498055"
      crossorigin="anonymous"></script>   
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4069805592498055"
