--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <meta property="og:title" content="MindMatchUp - Interactive Brain Game">
 <meta property="og:description" content="Test your memory and logic with MindMatchUp, an interactive brain game designed to improve cognitive skills while having fun!">
 <meta property="og:url" content="https://mindmatchup.com">
-<meta property="og:image" content="https://www.mindmatchup.com/og-image.jpg">
+<meta property="og:image" content="https://www.mindmatchup.com/og-image.png">
 <meta property="og:image:type" content="image/jpeg">
 <meta property="og:image:width" content="1200">
 <meta property="og:image:height" content="630">
@@ -19,7 +19,7 @@
 <meta property="twitter:title" content="MindMatchUp - Interactive Brain Game">
 <meta property="twitter:description" content="Play MindMatchUp and challenge your memory and logic skills. Have fun solving puzzles and improving your cognitive abilities!">
 <meta property="twitter:url" content="https://mindmatchup.com">
-<meta property="twitter:image" content="https://www.mindmatchup.com/og-image.jpg">
+<meta property="twitter:image" content="https://www.mindmatchup.com/og-image.png">
 <meta property="twitter:card" content="summary_large_image">
 <title>MindMatchUp - Interactive Quiz Games</title>
 <link rel="icon" href="favicon.ico" type="image/x-icon">
