--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                 <button class="play-btn" onclick="showDifficultySelection('general')">Play Now</button>
             </div>
             <div class="game-card" data-game="math">
-                <h3>Math Challenge</h3>
+                <h3>Maths Challenge</h3>
                 <p>Put your mathematical skills to the test</p>
                 <button class="play-btn" onclick="showDifficultySelection('math')">Play Now</button>
             </div>
