--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                 <p>Test your knowledge across various topics</p>
                 <button class="play-btn" onclick="showDifficultySelection('general')">Play Now</button>
             </div>
-            <div class="game-card" data-game="math">
+            <div class="game-card" data-game="maths">
                 <h3>Maths Challenge</h3>
                 <p>Put your mathematical skills to the test</p>
                 <button class="play-btn" onclick="showDifficultySelection('math')">Play Now</button>
