--- a/game.html
+++ b/game.html
@@ -44,10 +44,10 @@
                     <h3>Word Puzzle</h3>
                     <p>Solve word puzzles and riddles</p>
                 </div>
-                <div class="game-type-card" onclick="startGame('math')">
+                <div class="game-type-card" onclick="startGame('maths')">
                     <i class="fas fa-calculator"></i>
-                    <h3>Math Challenge</h3>
-                    <p>Test your math skills</p>
+                    <h3>Maths Challenge</h3>
+                    <p>Test your maths skills</p>
                 </div>
             </div>
         </div>
