--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 <link rel="icon" href="favicon.ico" type="image/x-icon">
 <link rel="icon" sizes="192x192" href="favicon-192x192.png">
 <link rel="apple-touch-icon" sizes="180x180" href="apple-icon.png">
+<link rel="canonical" href="https://mindmatchup.com/" />
 
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4069805592498055"
      crossorigin="anonymous"></script>   
