--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
     </div>
 
     <footer>
-        <p>2025 MindMatchUp. All rights reserved.</p>
+        <p>2025 Majcherczyk Digital. All rights reserved.</p>
     </footer>
 
     <script src="quizDatabase.js"></script>
