--- a/index.html
+++ b/index.html
@@ -300,6 +300,6 @@
     </footer>
 
     <script src="quizDatabase.js"></script>
-    <script src="main.js"></script>
+    <script type="module" src="main.js"></script>
 </body>
 </html> 
