--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             <div class="game-card" data-game="general">
                 <h3>General Knowledge</h3>
                 <p>Test your knowledge across various topics</p>
-                <button class="play-btn" >Play Now</button>
+                <button class="play-btn" onclick="showDifficultySelection('general')">Play Now</button>
             </div>
             <div class="game-card" data-game="maths">
                 <h3>Maths Challenge</h3>
@@ -300,6 +300,6 @@
     </footer>
 
     <script src="quizDatabase.js"></script>
-    <script type="module" src="main.js"></script>
+    <script src="main.js"></script>
 </body>
 </html> 
