--- a/index.html
+++ b/index.html
@@ -96,7 +96,8 @@
                 <div id="dailyChallengeCountdown" class="countdown-display"></div>
                 <button id="dailyChallengeBtn">Daily Challenge</button>
                 <button id="customQuizBtn">Create Quiz</button>
-               <button id="puzzleShopBtn" onclick="window.location.href='puzzle-shop.html';">Puzzle Shop</button> 
+              <button id="puzzleShopBtn" onclick="window.location.href='https://zzm6cb-da.myshopify.com/'">Puzzle Shop</button>
+
                <button id="privacyBtn">Privacy Policy</button>
                 <button id="termsBtn">Terms of Service</button>
                 <button id="contactBtn">Contact</button>
