--- a/bekindtoyourmind.html
+++ b/bekindtoyourmind.html
@@ -1,8 +1,8 @@
 <html>
 <head>
-  <meta http-equiv="refresh" content="0; url=https://zzm6cb-da.myshopify.com/collections/be-kind-to-your-mind />
+  <meta http-equiv="refresh" content="0; url=https://zzm6cb-da.myshopify.com/collections/be-kind-to-your-mind/" />
   <script type="text/javascript">
-    window.location.href = "https://zzm6cb-da.myshopify.com/collections/be-kind-to-your-mind";
+    window.location.href = "https://zzm6cb-da.myshopify.com/collections/be-kind-to-your-mind/";
   </script>
 </head>
 <body>
