--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
     </div>
 
     <footer>
-        <p>2025 Majcherczyk Digital. All rights reserved.</p>
+        <p>© 2025 Majcherczyk Digital Ltd. All rights reserved.</p>
     </footer>
 
     <script src="quizDatabase.js"></script>
